--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ set(SOURCES
   src/nlp_facade.cc
   src/zmp_constraint_builder.cc
   src/zero_moment_point.cc
+  src/stance_feet_calculator.cc
   src/optimizer_node_base.cc
   src/nlp_optimizer_node.cc
   src/qp_optimizer_node.cc
@@ -220,6 +221,7 @@ if(BUILD_TESTS)
                         test/google/zero_moment_point_test.cc
                         test/google/nlp_facade_test.cc
                         test/google/hyq_spliner_test.cc
+                        test/google/stance_feet_calculator_test.cc
                         #test/google/eigen_num_diff_test.cc
 #                        test/google/optimization_variables_test.cc
                         test/google/a_observer_visualizer_test.cc
