added interpreting_observer class to add context to optimization variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ set(SOURCES
   src/optimization_variables_interpreter.cc
   src/i_observer.cc
   src/a_observer_visualizer.cc
+  src/interpreting_observer.cc
   # constraints
   src/a_constraint.cc
   src/a_linear_constraint.cc
@@ -226,6 +227,7 @@ if(BUILD_TESTS)
                         #test/google/eigen_num_diff_test.cc
 #                        test/google/optimization_variables_test.cc
                         test/google/a_observer_visualizer_test.cc
+                        test/google/interpreting_observer_test.cc
                         #constraints
                         test/google/zmp_constraint_test.cc
                         test/google/joint_angles_constraint_test.cc
