renamed qp_optimizer to qp_facade for consistency with nlp_facade

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ include_directories(
 
 set(SOURCES  
   src/geometric_structs.cc
-  src/qp_optimizer.cc
+  src/qp_facade.cc
   src/foothold.cc
   src/hyq_inverse_kinematics.cc
   src/zmp_spline.cc
