added robot_interface to program against, instead of SL directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ set(SOURCES
   src/optimizer_node_base.cc
   src/nlp_optimizer_node.cc
   src/qp_optimizer_node.cc
+  src/robot_interface.cc
   # observer pattern code
   src/a_subject.cc
   src/optimization_variables.cc
@@ -227,6 +228,7 @@ if(BUILD_TESTS)
                         test/google/foothold_nominal_deviation_test.cc
                         test/google/optimization_visualizer_test.cc
                         test/google/optimization_variables_interpreter_test.cc
+                        test/google/robot_interface_test.cc
                         #constraints
                         test/google/zmp_constraint_test.cc
                         test/google/zmp_constraint_builder_test.cc
