readded constraint_container_test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,7 +250,7 @@ if(BUILD_TESTS)
                         test/google/constraint_factory_test.cc
                         test/google/zmp_constraint_builder_test.cc
                         test/google/joint_angles_constraint_test.cc
-#                        test/google/constraint_container_test.cc
+                        test/google/constraint_container_test.cc
                         test/google/range_of_motion_constraint_test.cc
                         #equations
 #                        test/google/initial_acceleration_equation_test.cc
