--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,8 +241,8 @@ if(BUILD_TESTS)
                         test/google/spline_container_test.cc
                         test/google/helpers.cc
                         test/google/zero_moment_point_test.cc
-                        test/google/nlp_facade_test.cc
-                        test/google/hyq_spliner_test.cc
+#                        test/google/nlp_facade_test.cc
+#                        test/google/hyq_spliner_test.cc
                         test/google/stance_feet_calculator_test.cc
                         test/google/optimization_variables_test.cc
                         test/google/interpreting_observer_test.cc
