--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,6 +272,7 @@ if(BUILD_TESTS)
                         test/google/nlp_test.cc
                         test/google/snopt_test.cc
                         test/google/snopt_adapter_test.cc
+                        test/google/ipopt_test.cc
                         )
                
     add_executable(googleTest ${MY_GTEST_UNITS})
