process of reducing dependencies to make standalone sl task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ set(SOURCES
   #exe
   src/robot_interface.cc
   src/controller.cc
+  src/sample_controller.cc
   src/walking_controller.cc
   src/walking_controller_state.cc
   # observer pattern code
