--- a/package.xml
+++ b/package.xml
@@ -46,6 +46,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>xpp_controller</build_depend>
   
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
