--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(SOURCES
   src/a_constraint.cc
   src/constraint_factory.cc
   src/a_linear_constraint.cc
+  src/linear_spline_equations.cc
   src/initial_acceleration_equation.cc
   src/final_state_equation.cc
   src/spline_junction_equation.cc
@@ -258,6 +259,7 @@ if(BUILD_TESTS)
 #                        test/google/zmp_constraint_test.cc
 #                        test/google/constraint_factory_test.cc
 #                        test/google/zmp_constraint_builder_test.cc
+                         test/google/linear_spline_equations_test.cc
 #                        test/google/joint_angles_constraint_test.cc
 #                        test/google/constraint_container_test.cc
 #                        test/google/range_of_motion_constraint_test.cc
