started writing test for zmp jacobian, but failed, so untested, will implement jacobian of footholds first

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,7 +235,7 @@ if(BUILD_TESTS)
     set(MY_GTEST_UNITS  test/google/gtest_main.cc 
 #                        test/google/spliner_test.cc
                          test/google/point2d_manipulations_test.cc
-#                        test/google/supp_polygon_test.cc
+                         test/google/supp_polygon_test.cc
 #                        test/google/supp_polygon_container_test.cc
                         test/google/helpers.cc
 #                        test/google/zero_moment_point_test.cc
@@ -257,7 +257,7 @@ if(BUILD_TESTS)
 #                        #constraints
 #                        test/google/zmp_constraint_test.cc
 #                        test/google/constraint_factory_test.cc
-#                        test/google/zmp_constraint_builder_test.cc
+                         test/google/zmp_constraint_builder_test.cc
                          test/google/linear_spline_equations_test.cc
 #                        test/google/joint_angles_constraint_test.cc
 #                        test/google/constraint_container_test.cc
