--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>xpp_controller</build_depend>
+  <build_depend>hyq_inverse_kinematics</build_depend>
   
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
